--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -89,7 +89,9 @@ div[id^="page-index"]
   color: #f8f9fa;
   border-radius: 5px;
   font-size: 1.2rem;
-  padding: 0px 15px 0px 15px;
+  padding: unset !important;
+  margin: unset !important;
+  min-height: unset !important;
   letter-spacing: 0.6px;
   opacity: 0.5;
 }
