--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -84,16 +84,23 @@ div[id^="page-index"]
 div[id^="page-index"]
 .notion-header__title {
   top: 30px !important;
-  left: 245px !important;
+  left: 302px !important;
   background: #6c757d;
   color: #f8f9fa;
-  border-radius: 2px;
-  font-size: 2.1rem;
+  border-radius: 2px !important;
+  font-size: 1.6rem;
   padding: unset !important;
   margin: unset !important;
+  line-height: 19px !important;
   min-height: unset !important;
   letter-spacing: 0.3px;
-  opacity: 0.5;
+  opacity: 0.6;
+  font-weight: 500 !important;
+  padding-top: 1px !important;
+  padding-right: 10px !important;
+  padding-bottom: 6px !important;
+  padding-left: 25px !important;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 10px 6px, rgba(0, 0, 0, 0.17) 0px 13px 12px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 div[id^="page-index"] h1 {
