--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -85,7 +85,7 @@ div[id^="page-index"]
 .notion-header__title {
   top: 30px !important;
   left: 302px !important;
-  background: #6c757d;
+  background: #212529;
   color: #f8f9fa;
   border-radius: 2px !important;
   font-size: 1.6rem;
