--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -183,21 +183,7 @@ div[id^="page-index"]
   overflow: hidden !important;
  }
 
-.notion-column-list {
-    position: relative;
-}
 
-.notion-column-list:before, .notion-column-list:after, .notion-column-list>first-child:before, .notion-column-list>first-child:after {
-    position:absolute; 
-    content:' ';
-    border-color:black; 
-    border-style:solid; 
-}
-
-.notion-column-list:before {top:0;left:0;border-width: 0px 0px 0px 0px}
-.notion-column-list:after {top:0;right:0;border-width: 20px 4px 10px 0}
-.notion-column-list>first-child:before {bottom:0;right:0;border-width: 10px 10px 10px 10px}
-.notion-column-list>first-child:after {bottom:0;left:0;border-width: 10px 10px 10px 10px}
  
 .notion-collection-list__item {
   padding: 20px;
@@ -223,10 +209,22 @@ div[id^="page-index"]
 /* ATTACK THE COLUMNS */
 .notion-column-list {
   margin-top: -3vh !important;
-  position: relative;
+  position: relative !important;
   flex-direction: column;
   align-items: center;
 }
+
+.notion-column-list:before, .notion-column-list:after, .notion-column-list>first-child:before, .notion-column-list>first-child:after {
+    position:absolute !important; 
+    content:' ';
+    border-color:black; 
+    border-style:solid; 
+}
+
+.notion-column-list:before {top:0;left:0;border-width: 0px 0px 0px 0px}
+.notion-column-list:after {top:0;right:0;border-width: 20px 4px 10px 0}
+.notion-column-list>first-child:before {bottom:0;right:0;border-width: 10px 10px 10px 10px}
+.notion-column-list>first-child:after {bottom:0;left:0;border-width: 10px 10px 10px 10px}
 
  
 .notion-column:nth-of-type(even) {
