--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -208,20 +208,21 @@ div[id^="page-index"]
 
 /* ATTACK THE COLUMNS */
 .notion-column-list {
-  margin-top: -27px !important;
   position: relative !important;
   flex-direction: column;
   align-items: center;
   border-top-color: initial;
   border-top-style: solid;
-  border-top-width: 8px;
+  border-top-width: 5px;
   border-bottom-color: initial;
   border-bottom-style: solid;
-  border-bottom-width: 8px;
+  border-bottom-width: 6px;
   border-left-color: initial;
   border-left-style: solid;
-  border-left-width: 8px;
-  padding-bottom: 40px;
+  border-left-width: 5px;
+  padding-bottom: 49px;
+  padding-top: 10px;
+  margin-top: -39px !important;
 }
  
 .notion-column:nth-of-type(even) {
