--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -74,7 +74,7 @@ div[id^="page-index"]
 .notion-link {
   color: #e9ecef !important;
  }
-/* "HERO" */
+/* ANTI "HERO" */
 
 div[id^="page-index"]
 .notion-header__title {
@@ -82,9 +82,18 @@ div[id^="page-index"]
 }
 
 div[id^="page-index"]
+.notion-header__title-wrapper { 
+  position: relative;
+}
+
+div[id^="page-index"]
 .notion-header__title {
-  top: -3px !important;
-  left: 376px !important;
+  position: absolute !important;
+  display: flex;
+  width: 150px !important;
+  top: 50%;
+  left: 50%;
+  transform: translate(-10%, -150%);
   background: -webkit-linear-gradient(110deg, #B791B1 40%, rgba(0, 0, 0, 0) 30%), -webkit-radial-gradient(farthest-corner at 0% 0%, #BBA39D 70%, #9E9BC4 70%) !important;
   background: -o-linear-gradient(110deg, #BE919C 40%, rgba(0, 0, 0, 0) 30%), -o-radial-gradient(farthest-corner at 0% 0%, #BE919C 70%, #9E9BC4 70%) !important;
   background: -moz-linear-gradient(110deg, #a60af3 40%, rgba(0, 0, 0, 0) 30%), -moz-radial-gradient(farthest-corner at 0% 0%, #BE919C 70%, #9E9BC4 70%) !important;
