--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -17,39 +17,39 @@
 }
 
 .pill-pink {
-  background: none;
+  background: none !important;
 }
 
 .pill-green {
-  background: none;
+  background: none !important;
 }
 
 .pill-pink {
-  background: none;
+  background: none !important;
 }
 
 .pill-orange {
-  background: none;
+  background: none !important;
 }
 
 .pill-pink {
-  background: none;
+  background: none !important;
 }
 
 .pill-purple {
-  background: none;
+  background: none !important;
 }
 
 .pill-blue {
-  background: none;
+  background: none !important;
 }
 
 .pill-brown {
-  background: none;
+  background: none !important;
 }
 
 .pill-red {
-  background: none;
+  background: none !important;
 }
 
  
