--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -132,7 +132,7 @@ div[id^="page-index"]
 .bg-gray {
   position: relative;
   bottom: 2.5px;
-  background: unset;
+  background: unset !important;
   letter-spacing: -1px;
   text-shadow: 0px 2px currentColor !important;
 }
@@ -140,7 +140,8 @@ div[id^="page-index"]
 .bg-brown {
     position: relative;
     right: 21px;
-    background: linear-gradient(110deg, #8EACAD 40%, rgba(0, 0, 0, 0) 30%), radial-gradient(farthest-corner at 0% 0%, #BE919C 70%, #9E9BC4 70%) !important;
+    background: unset !important;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
     padding-left: 35px;
     padding-right: 15px !important;
     padding-bottom: 3px;
