--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -192,7 +192,8 @@ div[id^="page-index"]
  .notion-property__title {
   background: #DEE2E6;
   padding: 6px !important;
-  margin: 7px !important;;
+  margin: 7px !important;
+  border-radius: 3px !important;
 }
 
 .notion-property__title > span {
