--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -564,9 +564,10 @@ div[id^="page-index"]
     transform: scale(0.6);
   }
   
+
 #hola > p {
     margin: 1vh auto 0;
-    transform: translateY(-50%);
+    transform: translate3d(-20%, 0, -10%);
     width: 46px;
     padding-left: 200px;
     font-size: 1.5rem;
@@ -575,7 +576,7 @@ div[id^="page-index"]
     margin-bottom: 3px;
   }
   
-#hola > p > img {
+  #hola > p > img {
     border-radius: 4px;
     border: 1px groove #ADB5BD;
     width: 52px !important;
@@ -584,7 +585,7 @@ div[id^="page-index"]
     top: 43px !important;
     right: var(--boton)!important;
     margin-bottom: -5px;
-    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 2px 2px, rgba(9, 30, 66, 0.13) 0px 0px 2px 2px;
   }
   
 
