--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -344,18 +344,8 @@ p {
     }
     div[id^="page-index"]
 .notion-header__title {
-  display: block !important;
-  position: relative;
-  top: 20px !important;
-  left: 250px;
-  background: #6c757d;
-  color: #f8f9fa;
-  border-radius: 5px;
-  font-size: 1.2rem;
-  padding: 0px 15px 0px 15px;
-  letter-spacing: 0.6px;
-  opacity: 0.5;
-}
+  display: none !important;
+  }
 
 div[id^="page-index"] h1 {
   line-height: 45px;
