--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -362,6 +362,28 @@ p {
     letter-spacing: -5px;
     color: #212529 !important;
 }
+    .bg-gray {
+  position: relative;
+  top: 18px;
+  right: 70px;
+  background: unset !important;
+  letter-spacing: -0.1px;
+  color: black !important;
+  text-shadow: 0px 1px currentColor !important;
+  font-weight: 300 !important;
+}
+
+.bg-brown {
+    position: relative;
+    right: 100px;
+    top: 20px;
+    background: unset !important;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 2px;
+    padding-left: 35px;
+    padding-right: 15px !important;
+    padding-bottom: 3px;
+    border-radius: 3px !important;
+}
 }
 
 
