--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -397,17 +397,30 @@ p {
     
 div[id^="page-index"]
 .notion-header__title {
-  display: block !important;
+  display: none !important;
+}
+    
+.bg-gray {
   position: relative;
-  top: -21px !important;
-  left: 107px !important;
-  background: #6c757d;
-  color: #f8f9fa;
-  border-radius: 5px;
-  font-size: 1.2rem;
-  padding: 0px 8px 0px 8px;
-  letter-spacing: 0.6px;
-  opacity: 0.5;
+  top: 28px;
+  right: 170px;
+  background: unset !important;
+  letter-spacing: -0.1px;
+  color: black !important;
+  text-shadow: 0px 1px currentColor !important;
+  font-weight: 300 !important;
+}
+
+.bg-brown {
+    position: relative;
+    right: 190px;
+    top: 30px;
+    background: unset !important;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 2px;
+    padding-left: 35px;
+    padding-right: 15px !important;
+    padding-bottom: 3px;
+    border-radius: 3px !important;
 }
   
   .notion-column {
