--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -401,20 +401,13 @@ div[id^="page-index"]
 }
     
 .bg-gray {
-  position: relative;
-  top: 28px;
-  right: 170px;
-  background: unset !important;
-  letter-spacing: -0.1px;
-  color: black !important;
-  text-shadow: 0px 1px currentColor !important;
-  font-weight: 300 !important;
+  display: none !important;
 }
 
 .bg-brown {
     position: relative;
-    right: 190px;
-    top: 30px;
+    right: 115px;
+    top: 50px;
     background: unset !important;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 2px;
     padding-left: 35px;
