--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -418,10 +418,11 @@ div[id^="page-index"]
   
   .notion-column {
     padding: 60px !important;
+    margin-top: -40px !important;
   }
     
   .notion-column-list {
-    margin-left: 120px !important;
+    margin-left: 110px !important;
     border: none !important;
   }
     
@@ -434,62 +435,32 @@ div[id^="page-index"]
   display: block !important;
   width: 65% !important;
   border: none !important;
-  border-radius: 1px !important;
+  border-radius: 3px !important;
 }
 
 .notion-collection-list__item-property 
 { 
   font-size: 19.5rem !important;
   font-weight: 100 !important;
-  padding: 0px !important;
-  margin-top: -22px !important;
-  margin-bottom: 24px !important;
-  z-index: -1 !important;
   text-decoration: none !important;
   letter-spacing: -8px !important;
 }
 
  .notion-property__title {
-   padding: 5px !important;
-   font-size: 1.27rem !important;
+   padding: 15px !important;
+   font-size: 1.27em !important;
    border-radius: 3px !important;
 }
-
-.notion-property__title > span > span {
-   width: 250px !important;
-  white-space: nowrap !important;
-  overflow: hidden !important;
-  text-overflow: ellipsis !important;
-}
-
-.notion-pill {
-     padding: 18px 40px !important;
-     width: 80% !important;
-     border-radius: 3px !important;
-  }
 
   .notion-column:nth-of-type(odd) {
   position: relative !important;   
   max-width: 590px !important;
   min-width: 590px !important;
   left: 90px !important;
-  top: 550px !important;
+  top: 750px !important;
   opacity: 1 !important;
-}
 
-  
-  .notion-column:nth-of-type(even) {
-  position: relative !important;   
-  max-width: 590px !important;
-  min-width: 590px !important;
-  left: 90px !important;
-  bottom: 590px !important;
 }
-
-.notion-image {
-    display: none !important;
-  }
-  
   #hola {
     opacity: 0 !important;
   }
