--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -1,5 +1,7 @@
 
     
+
+    
 :root {
   --opacidad: 1;
   --opacidad2: 1;
@@ -395,18 +397,6 @@ p {
     margin-top: -3vh !important;
   }
     
-  .super-navbar.minimal {
-  height: 52px;
-  box-shadow: rgb(0 0 0 / 20%) 0px 5px 20px -5px;
-  }
-    
-div[id^="page-index"]
-.notion-text {
-  
-left: 312px !important;
-bottom: 58px !important;
-}
-    
 div[id^="page-index"]
 .notion-header__title {
   display: none !important;
@@ -418,15 +408,14 @@ div[id^="page-index"]
 
 .bg-brown {
     position: relative;
-    right: 118px;
-    top: 41px !important;
+    right: 115px;
+    top: 50px;
     background: unset !important;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 1px, rgb(51, 51, 51) 0px 0px 0px 1.5px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 2px;
     padding-left: 35px;
     padding-right: 15px !important;
     padding-bottom: 3px;
-    border-radius: 1px !important;
-    font-weight: 500 !important;
+    border-radius: 3px !important;
 }
   
   .notion-column {
@@ -588,6 +577,12 @@ div[id^="page-index"]
     margin-bottom: -5px;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 2px 2px, rgba(9, 30, 66, 0.13) 0px 0px 2px 2px;
   }
+  
+
+  
+  
+
+  
   
 
   
