--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -1,7 +1,5 @@
 
     
-
-    
 :root {
   --opacidad: 1;
   --opacidad2: 1;
@@ -331,7 +329,7 @@ p {
     
   div[id^="page-index"]
   .notion-column-list{ 
-    right: 25px !important;
+    right: 63px !important;
     margin-top: 0vh !important;
     }
     .notion-column:nth-of-type(even) {
@@ -348,6 +346,12 @@ p {
 .notion-header__title {
   display: none !important;
   }
+
+div[id^="page-index"] h1 {
+  line-height: 45px;
+  position: relative;
+  top: 2px !important;
+}
     div[id^="page-index"]
 .notion-semantic-string {
     font-weight: 700;
@@ -357,34 +361,12 @@ p {
    
 .notion-collection-list__item-property {
     text-decoration: none;
-    font-size: 12.3rem;
-    font-weight: 100;
+    font-size: 7.3rem;
+    font-weight: 900;
     position: relative;
     left: 30px;
     letter-spacing: -5px;
     color: #212529 !important;
-}
-    .bg-gray {
-  position: relative;
-  top: 18px;
-  right: 70px;
-  background: unset !important;
-  letter-spacing: -0.1px;
-  color: black !important;
-  text-shadow: 0px 1px currentColor !important;
-  font-weight: 300 !important;
-}
-
-.bg-brown {
-    position: relative;
-    right: 100px;
-    top: 20px;
-    background: unset !important;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 2px;
-    padding-left: 35px;
-    padding-right: 15px !important;
-    padding-bottom: 3px;
-    border-radius: 3px !important;
 }
 }
 
@@ -399,36 +381,33 @@ p {
     
 div[id^="page-index"]
 .notion-header__title {
-  display: none !important;
-}
-    
-.bg-gray {
-  display: none !important;
-}
-
-.bg-brown {
-    position: relative;
-    right: 115px;
-    top: 50px;
-    background: unset !important;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 2px;
-    padding-left: 35px;
-    padding-right: 15px !important;
-    padding-bottom: 3px;
-    border-radius: 3px !important;
+  display: block !important;
+  position: relative;
+  top: -21px !important;
+  left: 107px !important;
+  background: #6c757d;
+  color: #f8f9fa;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  padding: 0px 8px 0px 8px;
+  letter-spacing: 0.6px;
+  opacity: 0.5;
 }
   
   .notion-column {
-    padding: 60px !important;
-    margin-top: -40px !important;
+    padding: 50px !important;
+    margin-left: 34px !important;
   }
     
   .notion-column-list {
-    margin-top: -320px !important;
-    margin-left: 110px !important;
+    margin-left: 40px !important;
     border: none !important;
   }
     
+ .notion-collection-list__item:first-child {
+    border: 4px solid black !important;
+    padding: 10px !important;
+}
   
 .notion-collection-list__item {
   flex-direction: column !important;
@@ -438,46 +417,62 @@ div[id^="page-index"]
   display: block !important;
   width: 65% !important;
   border: none !important;
-  border-radius: 3px !important;
-}
-
-.notion-collection-list__item-content {
-  justify-content: flex-start !important;
-  position: relative;
-  right: 120px !important;
+  border-radius: 1px !important;
 }
 
 .notion-collection-list__item-property 
 { 
-  font-size: 14.5rem !important;
+  font-size: 12.5rem !important;
+  font-weight: 700 !important;
+  padding: 0px !important;
+  margin-top: -22px !important;
+  margin-bottom: 24px !important;
   z-index: -1 !important;
-  font-weight: 100 !important;
   text-decoration: none !important;
   letter-spacing: -8px !important;
 }
 
  .notion-property__title {
-   padding: 15px !important;
-   font-size: 1.27em !important;
+   padding: 5px !important;
+   font-size: 1.27rem !important;
    border-radius: 3px !important;
 }
+
+.notion-property__title > span > span {
+   width: 250px !important;
+  white-space: nowrap !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+}
+
+.notion-pill {
+     padding: 18px 40px !important;
+     width: 80% !important;
+     border-radius: 3px !important;
+  }
 
   .notion-column:nth-of-type(odd) {
   position: relative !important;   
   max-width: 590px !important;
   min-width: 590px !important;
-  left: 83px !important;
-  top: 1000px !important;
+  left: 90px !important;
+  top: 510px !important;
   opacity: 1 !important;
-
 }
-    
+
+  
   .notion-column:nth-of-type(even) {
-    position: relative !important;
-    max-width: 590px !important;
-    min-width: 590px !important;
-    left: 79px !important;
-    bottom: 590px !important;
+  position: relative !important;   
+  max-width: 590px !important;
+  min-width: 590px !important;
+  left: 90px !important;
+  bottom: 590px !important;
+}
+
+.notion-image {
+    display: none !important;
+  }
+  
   #hola {
     opacity: 0 !important;
   }
@@ -577,15 +572,3 @@ div[id^="page-index"]
     margin-bottom: -5px;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 2px 2px, rgba(9, 30, 66, 0.13) 0px 0px 2px 2px;
   }
-  
-
-  
-  
-
-  
-  
-
-  
-  
-
-  
