--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -378,6 +378,10 @@ div[id^="page-index"] h1 {
     padding: 25px !important;
     margin-top: -3vh !important;
   }
+    div[id^="page-index"]
+.notion-header__title-wrapper {
+    display: none !important
+    }
     
 div[id^="page-index"]
 .notion-header__title {
