--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -392,8 +392,8 @@ div[id^="page-index"] h1 {
     
     div[id^="page-index"] 
  .notion-text {
-    left: 100px;
-    bottom: -30px;
+    left: 110px !important;
+    bottom: -30px !important;
     }
   
   .notion-column {
