--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -394,6 +394,7 @@ div[id^="page-index"] h1 {
  .notion-text {
     left: 110px !important;
     bottom: -30px !important;
+     transform: scale3d(0.7, 0.7, 0.7);
     }
   
   .notion-column {
