--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -392,10 +392,19 @@ div[id^="page-index"] h1 {
     
     div[id^="page-index"] 
  .notion-text {
-    left: 110px !important;
+    left: 80px !important;
     bottom: -30px !important;
-     transform: scale3d(0.5, 0.5, 0.5);
+     transform: scale3d(0.6, 0.6, 0.6);
     }
+    .bg-gray {
+  position: relative;
+  bottom: 2.5px;
+  background: unset !important;
+  letter-spacing: -0.9px;
+  color: black !important;
+  text-shadow: 0px 1px currentColor !important;
+  font-weight: 300 !important;
+}
   
   .notion-column {
     padding: 50px !important;
