--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -395,7 +395,7 @@ div[id^="page-index"] h1 {
     div[id^="page-index"] 
  .notion-text {
     left: 75px !important;
-    bottom: -50px !important;
+    bottom: -10px !important;
      transform: scale3d(0.6, 0.6, 0.6);
     }
     .bg-gray {
@@ -434,11 +434,12 @@ div[id^="page-index"] h1 {
   font-size: 26.5rem !important;
   font-weight: 500 !important;
   padding: 0px !important;
-  margin-top: -24px !important;
+  margin-top: -30px !important;
   margin-bottom: 24px !important;
   z-index: -1 !important;
   text-decoration: none !important;
   letter-spacing: -1px !important;
+  opacity: 0.5 !important;
 }
 
  .notion-property__title {
