--- a/fonts.css
+++ b/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'pirates';
-    src: url('https://cdn.rawgithub.com/MiguelGalp/MiguelGalp.github.io/blob/d2c8036f03a042f376fc20acc317666b5ca35ca7/Pirates-Blackbeard.otf
+    src: url('https://github.com/MiguelGalp/MiguelGalp.github.io/blob/6c9b53e841eaeed570e913f1370b2d12331707de/Pirates-Blackbeard.otf');
     font-weight: 100;
     font-style: normal;
 } 
