--- a/diagonal/fonts.css
+++ b/diagonal/fonts.css
@@ -1,7 +1,7 @@
 @font-face
 {
 font-family: pirates;
-src: url("../diagonal/Pirates-Blackbeard.otf);
-src: url("diagonal/Pirates-Blackbeard.ttf") format("truetype");
+src: url("/Pirates-Blackbeard.otf);
+src: url("/Pirates-Blackbeard.ttf") format("truetype");
 font-weight: normal; font-style: normal;
 }
