--- a/diagonal/fonts.css
+++ b/diagonal/fonts.css
@@ -1,7 +1,6 @@
-@font-face
-{
-font-family: 'pirates';
-src: url("diagonal/Pirates-Blackbeard.otf");
-src: url("diagonal/Pirates-Blackbeard.ttf") format("truetype");
-font-weight: normal; font-style: normal;
+@font-face {
+    font-family: F16;
+    src: url("../../diagonal/Pirates-Blackbeard.ttf") format('truetype');
+    font-weight: bold;
+    font-style: normal;
 }
