--- a/diagonal/fonts.css
+++ b/diagonal/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: F16;
-    src: url("../../diagonal/Pirates-Blackbeard.ttf") format('truetype');
+    src: url("/diagonal/Pirates-Blackbeard.ttf") format('truetype');
     font-weight: bold;
     font-style: normal;
 }
