--- a/diagonal/fonts.css
+++ b/diagonal/fonts.css
@@ -1,6 +1,4 @@
 @font-face {
-    font-family: F16;
-    src: url("/diagonal/Pirates-Blackbeard.ttf") format('truetype');
-    font-weight: bold;
-    font-style: normal;
+font-family: "CustomFont";
+src: url("https://miguelgalp.github.io/diagonal/pirates-blackbeard.ttf");
 }
