--- a/diagonal/fonts.css
+++ b/diagonal/fonts.css
@@ -1,4 +1,4 @@
 @font-face {
 font-family: "CustomFont";
-src: url("https://miguelgalp.github.io/diagonal/Pirates-Blackbeard.ttf");
+src: url("https://../diagonal/Pirates-Blackbeard.ttf");
 }
