--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -1,4 +1,4 @@
 @font-face {
 font-family: "CustomFont";
-src: url("../diagonal/Ransom Note.ttf");
+src: url("../diagonal/earwig factory rg.ttf");
 }
