--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -1,4 +1,4 @@
 @font-face {
 font-family: "CustomFont";
-src: url("https://fonts.festivalnuevaopera.org/pirates/Pirates-Bonney.ttf");
+src: url("../diagonal/earwig factory rg.ttf");
 }
